Added sonarqube analysis configuration

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,13 @@
  * This is a general purpose Gradle build.
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
  */
+
+ plugins {
+  id "org.sonarqube" version "3.3"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "gradle-test"
+  }
+}
